apps/team-b/tracing-consumer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracing-consumer
  namespace: team-b-ns1
spec:
  selector:
    app: tracing-consumer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
