apps/team-b/tracing-consumer/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing
  namespace: team-b-ns1
spec:
  hosts:
  - "test.predictly.se"
  gateways:
  - ingress-gateway.ingress-gateway
  http:
  - match:
    - uri:
        prefix: /tracing-consumer
    route:
    - destination:
        port:
          number: 8080
        host: tracing-consumer
